{
    "name": "InputsActionsControl",
    "maps": [
        {
            "name": "PlayingInputs",
            "id": "450e91b1-833a-41bc-864d-2e14baffd795",
            "actions": [
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "6d9229cd-97df-44cd-9550-1a71a519580f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "pause",
                    "type": "Button",
                    "id": "6f6be2ad-e187-4aa5-ad27-70d2d0792c26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "tap",
                    "type": "Value",
                    "id": "b439755e-9eb6-4830-beaa-efcfade6fe6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "fingerPos",
                    "type": "Value",
                    "id": "0045cf54-d269-4410-8357-9695a706f905",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed09d3dc-3ffb-485f-8666-487b7b87898e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55caf9a6-3cfb-4972-9a8c-b6e6b495cdd3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44d5c5d6-3061-4e50-b649-f96968dcb7fe",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc884039-9712-4420-b1b3-3cc88b3e8f48",
                    "path": "<Touchscreen>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "smartphone",
                    "action": "tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47725726-7d48-425f-a41b-79b79407e94e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "smartphone",
                    "action": "fingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuInputs",
            "id": "17bfb434-9b46-4d4f-aecb-1288e6f1277c",
            "actions": [
                {
                    "name": "back",
                    "type": "Button",
                    "id": "56618e7b-0c8b-4c23-b5eb-7da769bb8c6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2ba5883-a06e-4c85-86a9-18a83673970e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "pc",
                    "action": "back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "pc",
            "bindingGroup": "pc",
            "devices": []
        },
        {
            "name": "smartphone",
            "bindingGroup": "smartphone",
            "devices": []
        }
    ]
}